# Applied-Machine-Learning-AUEB

./: LICENSE  README.md
Assignment-1-Exploring-AirBnB-in-Athens/: README.md
Assignment-2-Exploring-Why-Civil-Resistance-Works/: README.md
Assignment-3-Roget-Thesaurus-Classification/: README.md  pyproject.toml  requirements.txt
