[tool.poetry]
name = "rogetclassification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
requests = ">=2.32.0"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
tiktoken = "^0.6.0"
openai = "^1.23.6"
sentence-transformers = "^2.7.0"
scikit-learn = ">=1.5.0"
xgboost = "^2.0.3"
lightgbm = ">=4.6.0"
seaborn = "^0.13.2"
joblib = "^1.4.0"
scikit-optimize = "^0.10.1"
jinja2 = ">=3.1.6"
certifi = ">=2024.7.4"
urllib3 = ">=2.5.0"
transformers = ">=4.48.0"
torch = ">=2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
